[project]
name = "update-power-bi-model"
version = "0.1.0"
description = ""
authors = [
    {name = "ds-borges",email = "diego97sousa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "pyautogui (>=0.9.54,<0.10.0)",
    "pyinstaller (>=6.16.0,<7.0.0)",
    "win10toast (>=0.9,<0.10)",
    "plyer (>=2.1.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
